--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
    "main": "index.js",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "ts-node src/index.ts"
+      "start": "ts-node src/index.ts",
+      "lint": "tslint -c tslint.json 'src/**/*.ts'"
    },
    "repository": {
       "type": "git",
@@ -18,8 +19,8 @@
    },
    "homepage": "https://gitlab.com/project-hitch/hitch#README",
    "devDependencies": {
-      "ts-node": "3.3.0",
       "@types/node": "^8.0.29",
+      "ts-node": "3.3.0",
       "typescript": "2.5.2"
    },
    "dependencies": {
@@ -27,6 +28,7 @@
       "luxon": "^0.2.12",
       "pg": "^7.3.0",
       "reflect-metadata": "^0.1.10",
+      "tslint": "^5.8.0",
       "typeorm": "0.1.9"
    }
 }
