--- a/package.json
+++ b/package.json
@@ -24,7 +24,14 @@
       "typescript": "2.5.2"
    },
    "dependencies": {
+      "@types/body-parser": "^1.16.8",
+      "@types/express": "^4.11.0",
       "@types/luxon": "^0.2.2",
+      "apollo-server-express": "^1.3.2",
+      "body-parser": "^1.18.2",
+      "express": "^4.16.2",
+      "graphql": "^0.12.3",
+      "graphql-tools": "^2.18.0",
       "luxon": "^0.2.12",
       "pg": "^7.3.0",
       "reflect-metadata": "^0.1.10",
