--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "ts-node src/index.ts",
-      "lint": "tslint -c tslint.json 'src/**/*.ts'"
+      "lint": "tslint -c tslint.json 'src/**/*.ts'",
+      "serve": "ts-node index.ts"
    },
    "repository": {
       "type": "git",
@@ -28,6 +29,7 @@
       "@types/express": "^4.11.0",
       "@types/luxon": "^0.2.2",
       "apollo-server-express": "^1.3.2",
+      "bcrypt": "^1.0.3",
       "body-parser": "^1.18.2",
       "express": "^4.16.2",
       "graphql": "^0.12.3",
