--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "ts-node src/index.ts",
       "lint": "tslint -c tslint.json 'src/**/*.ts'",
-      "serve": "ts-node index.ts"
+      "serve": "ts-node index.ts",
+      "ts": "ts-node"
    },
    "repository": {
       "type": "git",
@@ -28,6 +29,7 @@
       "@types/body-parser": "^1.16.8",
       "@types/express": "^4.11.0",
       "@types/luxon": "^0.2.2",
+      "@types/request-promise": "^4.1.39",
       "apollo-server-express": "^1.3.2",
       "bcrypt": "^1.0.3",
       "body-parser": "^1.18.2",
@@ -37,6 +39,7 @@
       "luxon": "^0.2.12",
       "pg": "^7.3.0",
       "reflect-metadata": "^0.1.10",
+      "request-promise": "^4.2.2",
       "tslint": "^5.8.0",
       "typeorm": "0.1.9"
    }
