--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
       "apollo-server-express": "^1.3.2",
       "bcrypt": "^1.0.3",
       "body-parser": "^1.18.2",
+      "cors": "^2.8.4",
       "express": "^4.16.2",
       "graphql": "^0.12.3",
       "graphql-tools": "^2.18.0",
