--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "ts-node src/index.ts",
       "lint": "tslint -c tslint.json 'src/**/*.ts'",
-      "serve": "ts-node index.ts",
+      "serve": "ts-node server.ts",
       "ts": "ts-node"
    },
    "repository": {
@@ -28,15 +28,19 @@
    "dependencies": {
       "@types/body-parser": "^1.16.8",
       "@types/express": "^4.11.0",
+      "@types/express-jwt": "^0.0.38",
       "@types/luxon": "^0.2.2",
       "@types/request-promise": "^4.1.39",
       "apollo-server-express": "^1.3.2",
       "bcrypt": "^1.0.3",
       "body-parser": "^1.18.2",
       "cors": "^2.8.4",
+      "dotenv": "^5.0.0",
       "express": "^4.16.2",
+      "express-jwt": "^5.3.0",
       "graphql": "^0.12.3",
       "graphql-tools": "^2.18.0",
+      "jsonwebtoken": "^8.1.1",
       "luxon": "^0.2.12",
       "pg": "^7.3.0",
       "reflect-metadata": "^0.1.10",
