--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,8 +2,8 @@
    "type": "postgres",
    "host": "localhost",
    "port": 5432,
-   "username": "am",
-   "database": "hitch_test",
+   "username": "postgres",
+   "database": "hitch_app",
    "synchronize": true,
    "entities": [
       "src/entity/**/*.ts"
