--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
       "graphql": "^0.12.3",
       "graphql-tools": "^2.18.0",
       "jsonwebtoken": "^8.1.1",
+      "lodash": "^4.17.5",
       "luxon": "^0.2.12",
       "pg": "^7.3.0",
       "reflect-metadata": "^0.1.10",
