--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
    "description": "Hitch hiking for modern hippies Long distance ride sharing for believers of humanity",
    "main": "index.js",
    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
+      "test": "jest --forceExit",
       "start": "ts-node src/index.ts",
       "lint": "tslint -c tslint.json 'src/**/*.ts'",
       "serve": "ts-node server.ts",
       "ts": "ts-node"
+   },
+   "jest": {
+      "globalSetup": "./tests/globalSetup.js",
+      "testEnvironment": "./tests/customEnvironment.js"
    },
    "repository": {
       "type": "git",
@@ -31,6 +35,10 @@
       "@types/express-jwt": "^0.0.38",
       "@types/luxon": "^0.2.2",
       "@types/request-promise": "^4.1.39",
+      "apollo-cache-inmemory": "^1.1.9",
+      "apollo-client": "^2.2.5",
+      "apollo-link": "^1.2.1",
+      "apollo-link-http": "^1.5.2",
       "apollo-server-express": "^1.3.2",
       "bcrypt": "^1.0.3",
       "body-parser": "^1.18.2",
@@ -39,10 +47,13 @@
       "express": "^4.16.2",
       "express-jwt": "^5.3.0",
       "graphql": "^0.12.3",
+      "graphql-tag": "^2.8.0",
       "graphql-tools": "^2.18.0",
+      "jest": "^22.4.2",
       "jsonwebtoken": "^8.1.1",
       "lodash": "^4.17.5",
-      "luxon": "^0.2.12",
+      "luxon": "^0.5.3",
+      "node-fetch": "^2.0.0",
       "pg": "^7.3.0",
       "reflect-metadata": "^0.1.10",
       "request-promise": "^4.2.2",
