--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
    },
    "homepage": "https://gitlab.com/project-hitch/hitch#README",
    "devDependencies": {
+      "@types/jest": "^22.2.0",
       "@types/node": "^8.0.29",
+      "jest": "^22.4.2",
       "nodemon": "^1.17.1",
       "ts-node": "3.3.0",
-      "typescript": "2.5.2",
-      "jest": "^22.4.2",
-      "tslint": "^5.8.0"
-      
+      "tslint": "^5.8.0",
+      "typescript": "2.5.2"
    },
    "dependencies": {
       "@types/body-parser": "^1.16.8",
