--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
    },
    "homepage": "https://gitlab.com/project-hitch/hitch#README",
    "devDependencies": {
-      "@types/jest": "^22.2.0",
-      "@types/node": "^8.0.29",
       "@types/body-parser": "^1.16.8",
       "@types/express": "^4.11.0",
       "@types/express-jwt": "^0.0.38",
+      "@types/graphql": "^0.13.0",
+      "@types/jest": "^22.2.0",
       "@types/luxon": "^0.2.2",
-      "@types/request-promise": "^4.1.39",      
+      "@types/node": "^8.0.29",
+      "@types/request-promise": "^4.1.39",
       "jest": "^22.4.2",
       "nodemon": "^1.17.1",
       "ts-node": "3.3.0",
@@ -51,8 +52,10 @@
       "express": "^4.16.2",
       "express-jwt": "^5.3.0",
       "graphql": "^0.12.3",
+      "graphql-subscriptions": "^0.5.8",
       "graphql-tag": "^2.8.0",
       "graphql-tools": "^2.18.0",
+      "http": "^0.0.0",
       "jsonwebtoken": "^8.1.1",
       "lodash": "^4.17.5",
       "luxon": "^0.5.3",
@@ -60,6 +63,7 @@
       "pg": "^7.3.0",
       "reflect-metadata": "^0.1.10",
       "request-promise": "^4.2.2",
+      "subscriptions-transport-ws": "^0.9.8",
       "typeorm": "0.1.9"
    }
 }
